Fixed image size & alignment

--- a/app/styles/feedback_style.css
+++ b/app/styles/feedback_style.css
@@ -1,15 +1,15 @@
 .ffbutton-red {
-  background-color: #E55234;
+  background-color: var(--primary-color);
 }
 
 .radiobutton {
-  background-color: #545454;;
+  background-color: #545454;
   color: white;
-  font-size: 24px;
+  font-size: 124%;
 }
 
 .radiobutton.active {
-  background-color: #E55234;
+  background-color: var(--primary-color);
   color: white;
 }
 
@@ -18,32 +18,29 @@
 }
 
 .cardImage {
-  max-height: 50%;
-  max-width: 50%;
-  padding-right: 5%;
+  max-height: 25vh;
+  max-width: 20vh;
+  bottom: 60%;
 }
 
 .feedback-info {
   font-size: 22px;
-  position: absolute;
-  left: 50%;
-  top: 20%;
-  padding: 5px;
+  margin-left: 25%;
 }
 
 .feedback-nro {
   font-size: 22px;
+  color: var(--light-gray);
   position: fixed;
-  bottom: 30%;
-  margin-left: 40%;
-  color: var(--dark-gray);
+  left: 45%;
+  margin-top: 10%;
 }
 
 .feedback-question {
-  font-size: 18px;
-  position: fixed;
-  bottom: 42%;
-  margin-left: 2%;
+  font-size: 120%;
+  top: 50%;
+  padding: 2%;
+  margin-top: 5%;
 }
 
 .feedback-header {
@@ -51,16 +48,17 @@
   font-size: 30px;
   font-weight: bold;
   padding: 10px;
-  color:var(--primary-color);
+  color: var(--primary-color);
+  left: 30%;
+  margin-bottom: 5%;
 }
 
 .feedback-btn {
-  font-size: 30px;
-  position: fixed;
-  bottom: 30%;
-  margin-left: 27%;
-  margin-right: 50%;
+  font-size: 32px;
+  margin-left: 29%;
   background: var(--dark-gray);
   color: var(--light-gray);
   border: none;
+  position: fixed;
+  margin-top: 10%;
 }
